<resources>
    <string name="app_name">Map &amp; Alarms</string>

    <!--KEYS AND PROPERTIES-->
    <string name="google_api_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY</string>

    <!-- MAP FEATURE -->
    <string name="load">Cargando</string>
    <string name="add_markers">Add markers</string>
    <string name="can_t_add_markers">Can\'t add markers</string>
    <string name="start_adding_markers">Start adding markers</string>
    <string name="clear_all">clear all</string>

    <!-- ALARMS FEATURE -->
    <string name="add_new_alarm">Add new alarm</string>
    <string name="add_day">Add day and time</string>
    <string name="add_time">Add time</string>
    <string name="add_notification_title">Add notification title</string>
    <string name="add_message_notification">Add notification message</string>
    <string name="save_alarm">Save alarm</string>
    <string name="validate_date_and_time">Validate alarm</string>
</resources>