<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_map.view.MapFragment">

    <fragment
        android:id="@+id/map_markers"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="FragmentTagUsage" />

    <include
        android:id="@+id/view_load"
        layout="@layout/view_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_160"
        android:layout_marginHorizontal="@dimen/size_20"
        android:background="@drawable/shape_bottom_rounded"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/size_70"
            android:layout_height="@dimen/size_70"
            android:layout_marginTop="@dimen/size_10"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_switch_markers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/add_markers"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/button_add_alarm"
            app:layout_constraintStart_toEndOf="@+id/button_delete_markers"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_markers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/can_t_add_markers"
            android:textOn="@string/start_adding_markers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_switch_markers" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_delete_markers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/clear_all"
            android:src="@drawable/icon_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/clear_all"
            android:src="@drawable/icon_notification_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>